update parameters of APIs stock-candles and crawl data by the minute and modifly config file
